@startuml
' CORRECTION TP 3 : Automate complet du protocole série fiabilisé
skinparam state {
    BackgroundColor #F0FDF4
    BorderColor #15803D
}

[*] --> Repos : Initialisation / resetRetry()

state Repos {
    entry / ecouterBus()
}

state EnvoiRequete {
    entry / emettreTrameREQ()
    entry / armerTimer(3s)
}

state AttenteReponse {
}

state TraitementDonnees {
    entry / emettreACK()
    entry / enregistrerMesures()
}

state DefautCommunication {
    entry / journaliserErreur()
    entry / emettreAlarmeTechnique()
}

Repos --> EnvoiRequete : OrdreReleveRecu / retryCount = 0
EnvoiRequete --> AttenteReponse : [TrameEmise == true]

' Réponse valide reçue
AttenteReponse --> TraitementDonnees : TrameRecue [CRC_Valide == true] / desarmerTimer()
TraitementDonnees --> Repos : [EnregistrementOK == true]

' Erreur avec répétition (retry < 3)
AttenteReponse --> EnvoiRequete : Timeout3s [retryCount < 3] / retryCount++
AttenteReponse --> EnvoiRequete : TrameRecue [CRC_Valide == false && retryCount < 3] / retryCount++

' Erreur critique (retry >= 3)
AttenteReponse --> DefautCommunication : Timeout3s [retryCount >= 3]
AttenteReponse --> DefautCommunication : TrameRecue [CRC_Valide == false && retryCount >= 3]

DefautCommunication --> Repos : AcquittementOperateur / resetRetry()

@enduml
